fix purecss grid and align login right

--- a/client/side-menu.css
+++ b/client/side-menu.css
@@ -146,7 +146,7 @@ appears on the left side of the page.
     This styles the menu heading.
     */
 		#menu .pure-menu-heading {
-			font-size: 100%;
+			/*font-size: 100%;*/
 			color: #fff;
 			margin: 0;
 		}
